--- a/styles-local.html
+++ b/styles-local.html
@@ -149,8 +149,22 @@ a {
 	width: 100px;
 }
 
+#title-search {
+	width: 300px;
+}
+
+#title-search::placeholder {
+	color: black;
+	opacity: 0.75;
+}
+
+#title-search:not(:placeholder-shown) {
+	background: navy;
+	color: white;
+}
 
 </style>
+
 
 
 
